TAC-163 - table now fills the html container. Need to still get around the issue of having two vertical scrollbars

--- a/public/channelgrabber/products/scss/_products.scss
+++ b/public/channelgrabber/products/scss/_products.scss
@@ -55,7 +55,6 @@ $screen-padding: 20px;
     float: left;
     clear: both;
     margin-bottom: 20px;
-    padding: 20px 20px 0px 20px !important;
     box-sizing: border-box;
     transition: all 0.5s ease;
 }
